--- a/lane_follow_pnc/.vscode/settings.json
+++ b/lane_follow_pnc/.vscode/settings.json
@@ -109,6 +109,10 @@
         "set": "cpp",
         "string": "cpp",
         "string_view": "cpp",
-        "*.tpp": "cpp"
+        "*.tpp": "cpp",
+        "*.txx": "cpp",
+        "condition_variable": "cpp",
+        "future": "cpp",
+        "mutex": "cpp"
     }
 }
